...
        self.vm = vm
    }
    
    var body: some View {
        Group {
            VStack(alignment: .leading) {
                Text("Description").font(.title2).padding(.bottom, 5)
                Text(post.description).font(.callout).padding(.bottom)
                
                Text("User").font(.title2).padding(.bottom, 5)
                VStack(alignment: .leading) {
                    Text("Name: " + (vm.author?.name ?? "a"))
                    Text("Email: " + (vm.author?.email ?? "b"))
...
